--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -31,7 +31,8 @@
       "alt_text": {
         "share_on_facebook": "Share on Facebook",
         "share_on_twitter": "Tweet on Twitter",
-        "share_on_pinterest": "Pin on Pinterest"
+        "share_on_pinterest": "Pin on Pinterest",
+        "share_on_tiktok": "Share on Pinterest"
       }
     },
     "newsletter_form": {
