--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -38,7 +38,7 @@
     "newsletter_form": {
       "newsletter_label": "Sign up for the latest news, offers and styles",
       "newsletter_placeholder": "Your email",
-      "submit": "Join Now",
+      "submit": "Subscribe",
       "confirmation": "Thanks for subscribing"
     },
     "search": {
