final version need to start making ads

--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -114,7 +114,7 @@
       "view": "View Cart",
       "and_more": "And more",
       "checkout": "Check Out",
-      "empty": "No products in the cart.",
+      "empty": "You have no items in you Bag",
       "cookies_required": "Enable cookies to use the shopping cart",
       "continue_browsing": "Continue shopping",
       "close_notification": "Close",
