--- a/locales/pt-PT.json
+++ b/locales/pt-PT.json
@@ -310,6 +310,7 @@
       "shipping_policy_html": "<a href=\"{{ link }}\">Portes de envio<\/a> calculados no pagamento.",
       "quantity": "Quantidade",
       "add_to_cart": "Adicionar ao Carrinho de Compras",
+      "add_bundle_to_cart": "Adicionar ao Carrinho de Compras",
       "full_details": "Detalhes completos",
       "quickview_text": "Quickshop",
       "wishlist_no_result": "There are no products in your wishlist!",
