--- a/locales/fr.json
+++ b/locales/fr.json
@@ -30,6 +30,7 @@
       "share_title": "Partager",
       "alt_text": {
         "share_on_facebook": "Partager sur Facebook",
+        "share_on_tiktok": "Partager sur TikTok",
         "share_on_twitter": "Tweeter sur Twitter",
         "share_on_pinterest": "Épingler sur Pinterest"
       }
@@ -319,6 +320,7 @@
       "shipping_policy_html": "<a href=\"{{ link }}\">Frais de port<\/a> calculés à la caisse.",
       "quantity": "Quantité",
       "add_to_cart": "Ajouter au panier",
+      "add_bundle_to_cart": "Ajouter au panier",
       "full_details": "Tous les détails",
       "quickview_text": "Quickshop",
       "wishlist_no_result": "There are no products in your wishlist!",
